src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:(259,15)-(260,17): error: [GHC-83865]
    • Couldn't match expected type ‘Term s' PBool’
                  with actual type ‘Bool’
    • In the second argument of ‘(#&&)’, namely
        ‘contractAmount >= goal’
      In the second argument of ‘(#&&)’, namely
        ‘pnot # (pmustStartBeforeTimeout # validRange # deadline)
           #&& contractAmount >= goal’
      In the expression:
        pmustBeSignedBy # txInfo # pfromData pcfRecipient
          #&&
            pnot # (pmustStartBeforeTimeout # validRange # deadline)
              #&& contractAmount >= goal
    • Relevant bindings include
        validRange :: Term s' (PInterval PPosixTime)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:251:9)
        deadline :: Term s' PInteger
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:252:9)
        goal :: Term s' PInteger
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:253:9)
        pcfDeadline :: Term s' (PAsData PInteger)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:250:59)
        pcfGoal :: Term s' (PAsData PInteger)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:250:50)
        pcfRecipient :: Term s' (PAsData PPubKeyHash)
          (bound at /Users/sho/io/plinth-plutarch-paper-code/src-errormsg-categories/PT-SYN-07-Crowdfund-OrdVsHashGeq/Plutarch.hs:250:36)
        (Some bindings suppressed; use -fmax-relevant-binds=N or -fno-max-relevant-binds)
    |
259 |           #&& contractAmount
    |               ^^^^^^^^^^^^^^...
